// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-items-per-page #render should render as expected (1) 1`] = `
<gux-pagination-items-per-page items-per-page="25">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown-v2-beta>
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    25
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
            <!---->
            25
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            50
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            75
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            100
          </gux-option-v2>
        </gux-listbox>
      </gux-dropdown-v2-beta>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (2) 1`] = `
<gux-pagination-items-per-page items-per-page="50">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown-v2-beta>
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    50
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            25
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
            <!---->
            50
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            75
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            100
          </gux-option-v2>
        </gux-listbox>
      </gux-dropdown-v2-beta>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (3) 1`] = `
<gux-pagination-items-per-page items-per-page="75">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown-v2-beta>
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    75
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            25
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            50
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
            <!---->
            75
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            100
          </gux-option-v2>
        </gux-listbox>
      </gux-dropdown-v2-beta>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (4) 1`] = `
<gux-pagination-items-per-page items-per-page="100">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown-v2-beta>
        <mock:shadow-root>
          <gux-popup>
            <div class="gux-target-container-collapsed" slot="target">
              <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    100
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
              </button>
            </div>
            <div class="gux-listbox-container" slot="popup">
              <slot></slot>
            </div>
          </gux-popup>
        </mock:shadow-root>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            25
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            50
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="false" id="gux-option-v2-i" role="option">
            <!---->
            75
          </gux-option-v2>
          <gux-option-v2 aria-disabled="false" aria-selected="true" class="gux-selected" id="gux-option-v2-i" role="option">
            <!---->
            100
          </gux-option-v2>
        </gux-listbox>
      </gux-dropdown-v2-beta>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;
